--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>MyBookList</title>
 </head>
 <body>
@@ -34,6 +34,6 @@
             <h4>Copyright ...</h4>
         </footer>
     </section>
-
+    <script type="module" src="index.js"></script>
 </body>
 </html>
