--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             <h4>Copyright ...</h4>
         </footer>
     </section>
-
+    <script type="module" src="index.js"></script>
 </body>
 </html>
