Update html file with luxon date

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>Contact</li>
             </ul>
         </nav>
-        <p id="date">March 19th 2021, 9:25:32 am</p>
+        <p id="date"></p>
     </div>
     <h2>All awesome books</h2>
 </header>
