Add div for error message

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div id="library-container"></div>
         </article>
         <main id="main"></main>
+        <div id="error-message"></div>
         <div id="contact"></div>
         <footer class="copyright">
             <h4>Copyright ...</h4>
